--- a/index.html
+++ b/index.html
@@ -55,13 +55,18 @@
 				<section data-background="assets/images/background-secondary.png">
 					<div><img src="assets/images/personal-square.jpg" class="profile-photo"></div>
 					<h4>Jorge Tutor</h4>
-					<div class="xsmall"><em>Software Project Manager & Drupal Senior Developer</em></div>
+					<div class="xsmall"><em>Drupal Senior Developer <br> & <strong>Agile Enthusiast</strong></em></div>
 					<div class="small"><a href="https://twitter.com/jltutor" target="_blank">@jltutor</a></div>
-					<p class="xsmall"><a href="https://drupal.org/u/gedur" target="_blank">drupal.org/u/gedur</a><br><span class="xsmall">Module maintainer: Ga Push, Commerce Google Analytics, IP, Misery...</span></p>
+					<p class="xsmall"><a href="https://drupal.org/u/gedur" target="_blank">drupal.org/u/gedur</a></p>
 					<img src="assets/images/metadrop-logo.svg" class="metadrop-logo">
 				</section>
 
 				<!-- START -->
+
+				<section>
+					<p class="small"><em>Maybe... the major problems of systems work are not so much <strong class="featured">technical</strong> as <strong class="featured">sociological</strong>.</em></p>
+					<p class="xsmall right">(DeMarco & Lister, 1987)</p>
+				</section>
 
 				<section>
 					<p class="xsmall left"><em>In this session we will talk about:</em></p>
@@ -82,10 +87,39 @@
 				</section>
 
 				<section>
-					<h3>Introduction to Peopleware</h3>
-					<p class="xsmall">Software development process that emerged from test-driven development (TDD).</p>
-					<p class="small">An idea about how software development should be managed by both <strong class="featured">business interests</strong> and <strong class="featured">technical insight</strong>.</p>
-					<p class="xsmall">It combines the general techniques and principles of TDD with ideas from domain-driven design and object-oriented analysis and design to provide software development and management teams with shared tools and a shared process to collaborate on software development.</p>
+					<div><img src="assets/images/triangle.png" class="small"></div>
+					<p class="small">The <strong>three</strong> core aspects of computer technology are: <strong class="featured">hardware</strong>, <strong class="featured">software</strong> and <strong class="featured"><u>peopleware</u></strong>.</p>
+					<p class="xsmall italic">Peopleware refers to anything that has to do with the role of people including such issues as developer productivity, teamwork, group dynamics, the psychology of programming, project management, organizational factors, human interface design, and human-machine interaction..</p>
+				</section>
+
+				<section data-background="assets/images/background-secondary.png">
+					<em>Chapter 2</em>
+					<h2>Management 3.0</h2>
+				</section>
+
+				<section data-background="assets/images/background-secondary.png">
+					<em>Chapter 3</em>
+					<h2>Motivation</h2>
+				</section>
+
+				<section data-background="assets/images/background-secondary.png">
+					<em>Chapter 4</em>
+					<h2>Self-organized teams</h2>
+				</section>
+
+				<section data-background="assets/images/background-secondary.png">
+					<em>Chapter 5</em>
+					<h2>Multifunctional teams</h2>
+				</section>
+
+				<section data-background="assets/images/background-secondary.png">
+					<em>Chapter 6</em>
+					<h2>Productivity & Waste</h2>
+				</section>
+
+				<section data-background="assets/images/background-secondary.png">
+					<em>Chapter 7</em>
+					<h2>Conclusions</h2>
 				</section>
 
 				<section data-background="assets/images/background-primary.png">
