--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 				</section>
 
 				<section>
-					<div><img src="assets/images/triangle.png" class="small"></div>
+					<div><img src="assets/images/triangle.png" class="small margin-none"></div>
 					<p class="small">The <strong>three</strong> core aspects of computer technology are: <strong class="featured">hardware</strong>, <strong class="featured">software</strong> and <strong class="featured"><u>peopleware</u></strong>.</p>
 					<p class="xsmall italic">Peopleware refers to anything that has to do with the role of people including such issues as developer productivity, teamwork, group dynamics, the psychology of programming, project management, organizational factors, human interface design, and human-machine interaction..</p>
 				</section>
