--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 	</head>
 	<body>
 		<div class="sponsor">
-			<img src="assets/images/event-logo.png" class="logo"/><span>Diving into Peopleware <strong>@jltutor</strong> | http://goo.gl/@TODO</span>
+			<img src="assets/images/event-logo.png" class="logo"/><span>Diving into Peopleware <strong>@jltutor</strong> | https://bit.ly/2Mm6k6i</span>
 		</div>
 		<div class="reveal">
 			<div class="slides">
@@ -37,7 +37,7 @@
 					<div class="featured-box-primary left">
 						<h1>Diving into Peopleware</h1>
 						<em>Productive Projects and Teams</em>
-						<div class="xxsmall">http://goo.gl/@TODO</div>
+						<div class="xxsmall">https://bit.ly/2Mm6k6i</div>
 					</div>
 
 					<div class="featured-box-secondary left xsmall">
