--- a/index.html
+++ b/index.html
@@ -92,6 +92,187 @@
 					<p class="xsmall italic">Peopleware refers to anything that has to do with the role of people including such issues as developer productivity, teamwork, group dynamics, the psychology of programming, project management, organizational factors, human interface design, and human-machine interaction..</p>
 				</section>
 
+				<section>
+					<h3>The Principles of Scientific Management</h3>
+					<div class="xsmall">(Frederick Taylor, 1911)</div>
+					<p><strong class="featured">Thinkers</strong> vs <strong class="featured">Doers</strong></p>
+					<p class="xsmall">Functional departments, especialization, hierarchy</p>
+					<p class="xsmall">Up/Down (Social) | Comunication Issues | Time & Planification (waterfall model)</p>
+				</section>
+
+				<section>
+					@TODO img!
+					<p>People are Interchangeable <strong class="featured">Resources</strong></p>
+				</section>
+
+				<section>
+					<h3>Classic Software Development Mistakes (People)</h3>
+					<p class="xsmall">(McConnell, 1996)</p>
+					<ol  class="xsmall">
+						<li>Undermined Motivation</li>
+						<li>Weak personnel</li>
+						<li>Uncontrolled problem employees</li>
+						<li>Heroics</li>
+						<li>Adding pleople to late project</li>
+						<li>Noisy, crowded offices</li>
+						<li>Friction between developers & customers</li>
+						<li>Unrealistic expectations</li>
+						<li>Lack of effective project sponsorship</li>
+						<li>Lack of stakeholder buy-in</li>
+					</ol>
+				</section>
+
+				<section>
+					<p><strong class="featured">Production</strong> vs <strong class="featured">Development</strong></p>
+					<table class="xsmall">
+						<tr>
+							<td class="right">Strict & Clear phases, Especialization, One Process</td>
+							<td>Creativity, Motivation, Invidividual Skills, Communication</td>
+						</tr>
+						<tr>
+							<td class="right italic">Requirements → Design → Build → Testing → Release</td>
+							<td class="italic">Open to change, not clear specifications, what does the client need?</td>
+						</tr>
+					</table>
+					<p ></p>
+				</section>
+
+				<section>
+					<h3>Manifesto for Agile Software Development</h3>
+					<ul class="xsmall none center">
+						<li><strong class="featured">Individuals and interactions</strong> over <em>processes and tools</em></li>
+						<li><strong class="featured">Working software</strong> over <em>comprehensive documentation</em></li>
+						<li><strong class="featured">Customer collaboration</strong> over <em>contract negotiation</em></li>
+						<li><strong class="featured">Responding to change</strong> over <em>following a plan</em></li>
+					</ul>
+
+				</section>
+
+				<section>
+					<h4>12 Principles of Agile Software Development</h4>
+					<ul class="xxsmall none center">
+						<li>Our highest priority is to <strong class="xbig">satisfy the customer</strong> through early and continuous delivery of <strong class="xbig">valuable software</strong>.</li>
+						<li>Welcome <strong class="xbig">changing requirements</strong>, even late in	development. Agile processes harness change for the customer's <strong class="xbig">competitive advantage</strong>.</li>
+
+						<li><strong class="xbig">Deliver</strong> working software <strong class="xbig">frequently</strong>, from a
+						couple of weeks to a couple of months, with a
+						preference to the shorter timescale.</li>
+
+						<li>Business people and developers must <strong class="xbig">work
+						together</strong> daily throughout the project.</li>
+
+						<li>Build projects around <strong class="xxbig featured">motivated individuals</strong>.
+						Give them the <strong class="xbig">environment and support</strong> they need,
+						and trust them to get the job done.</li>
+
+						<li>The most efficient and effective method of
+						conveying information to and within a development
+						team is <strong class="xbig">face-to-face conversation</strong>.</li>
+
+						<li><strong class="xbig">Working software</strong> is the primary <strong class="xbig">measure of progress</strong>.</li>
+
+						<li>Agile processes promote <strong class="xbig">sustainable development</strong>.
+						The sponsors, developers, and users should be able
+						to maintain a constant pace indefinitely.</li>
+
+						<li>Continuous attention to technical excellence
+						and <strong class="xbig">good design enhances agility</strong>.</li>
+
+						<li><strong class="xbig">Simplicity</strong> --the art of maximizing the amount
+						of work not done-- is essential.</li>
+
+						<li>The best architectures, requirements, and designs
+						emerge from <strong class="xxbig featured">self-organizing teams</strong>.</li>
+
+						<li>At regular intervals, the team reflects on how
+						to <strong class="xbig">become more effective</strong>, then tunes and adjusts
+						its behavior accordingly.</li>
+					</ul>
+
+				</section>
+
+				<section>
+					<h3>Modern Agile</h3>
+					<img src="assets/images/modern_agile_wheel_english.svg" alt="modern agile Manifesto" class="large">
+				</section>
+
+				<section>
+					<h3>Tribal Leadership</h3>
+					<p class="xxsmall">(Logan, King & Fischer-Wright, 2008)</p>
+					<table class="xsmall">
+						<tr class="small">
+							<th>Stage</th>
+							<th>Mood</th>
+							<th>Theme</th>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td>Despairing Hostility <div class="xsmall">Hostile, desesperated, violent, survivor</div></td>
+							<td>Life sucks</td>
+						</tr>
+						<tr>
+							<td>2</td>
+							<td>Apathetic Victim <div class="xsmall">Resigned, sit on your hands, apathetic, demotivated</div></td>
+							<td>My Life sucks</td>
+						</tr>
+						<tr>
+							<td>3</td>
+							<td>Lone Warrior <div class="xsmall">Competitive, prideful, tapped</div></td>
+							<td>I'm great (and you're not!)</td>
+						</tr>
+						<tr>
+							<td>4</td>
+							<td>Tribal Pride <div class="xsmall">Agile, Common purpose, High performanced</div></td>
+							<td>We'are great (and they're not!)</td>
+						</tr>
+						<tr>
+							<td>5</td>
+							<td>Innocent Wonderment <div class="xsmall">Agile, global purpose</div></td>
+							<td>Life is great</td>
+						</tr>
+					</table>
+				</section>
+				
+				<section>
+				<h3>Good to Great</h3>
+					<p class="xxsmall">(Collins 2001)</p>
+					<p>What differentiate great companies</p>
+					<table class="xsmall">
+						<tr class="small">
+							<th>Stage</th>
+							<th>Mood</th>
+							<th>Theme</th>
+						</tr>
+						<tr>
+							<td>1</td>
+							<td>Despairing Hostility <div class="xsmall">Hostile, desesperated, violent, survivor</div></td>
+							<td>Life sucks</td>
+						</tr>
+						<tr>
+							<td>2</td>
+							<td>Apathetic Victim <div class="xsmall">Resigned, sit on your hands, apathetic, demotivated</div></td>
+							<td>My Life sucks</td>
+						</tr>
+						<tr>
+							<td>3</td>
+							<td>Lone Warrior <div class="xsmall">Competitive, prideful, tapped</div></td>
+							<td>I'm great (and you're not!)</td>
+						</tr>
+						<tr>
+							<td>4</td>
+							<td>Tribal Pride <div class="xsmall">Agile, Common purpose, High performanced</div></td>
+							<td>We'are great (and they're not!)</td>
+						</tr>
+						<tr>
+							<td>5</td>
+							<td>Innocent Wonderment <div class="xsmall">Agile, global purpose</div></td>
+							<td>Life is great</td>
+						</tr>
+					</table>
+
+
+				</section>
+
 				<section data-background="assets/images/background-secondary.png">
 					<em>Chapter 2</em>
 					<h2>Management 3.0</h2>
