Chapter 1 - First version

--- a/index.html
+++ b/index.html
@@ -197,6 +197,49 @@
 				</section>
 
 				<section>
+					<h3>Good to Great</h3>
+					<p class="xxsmall">(Collins 2001)</p>
+					<p>What differentiate <strong class="featured">great</strong> companies</p>
+					<table class="xsmall">
+						<tr>
+							<td>1</td>
+							<td>Ambition & Humility</td>
+							<td class="small">Us over Me</td>
+						</tr>
+						<tr>
+							<td>2</td>
+							<td>First <strong>Who</strong> a then <strong>What</strong></td>
+							<td class="small">The Right People</td>
+						</tr>
+						<tr>
+							<td>3</td>
+							<td>Confront Grim Reality</td>
+							<td class="small">Recognize, Face it</td>
+						</tr>
+						<tr>
+							<td>4</td>
+							<td>Clear strategy</td>
+							<td class="small">Best Skills, Economy core, Passion</td>
+						</tr>
+						<tr>
+							<td>5</td>
+							<td>Discipline culture</td>
+							<td class="small">Spirit, Innovation, Flexibility, Responsability... <br>(Avoiding bureaucracy & hierarchy). </td>
+						</tr>
+						<tr>
+							<td>6</td>
+							<td>Technology accelerators</td>
+							<td class="small">Managed by strategy</td>
+						</tr>
+						<tr>
+							<td>7</td>
+							<td>Constancy</td>
+							<td class="small">Inertia</td>
+						</tr>
+					</table>
+				</section>
+
+				<section>
 					<h3>Tribal Leadership</h3>
 					<p class="xxsmall">(Logan, King & Fischer-Wright, 2008)</p>
 					<table class="xsmall">
@@ -232,70 +275,44 @@
 						</tr>
 					</table>
 				</section>
-				
+
 				<section>
-				<h3>Good to Great</h3>
-					<p class="xxsmall">(Collins 2001)</p>
-					<p>What differentiate great companies</p>
-					<table class="xsmall">
-						<tr class="small">
-							<th>Stage</th>
-							<th>Mood</th>
-							<th>Theme</th>
-						</tr>
-						<tr>
-							<td>1</td>
-							<td>Despairing Hostility <div class="xsmall">Hostile, desesperated, violent, survivor</div></td>
-							<td>Life sucks</td>
-						</tr>
-						<tr>
-							<td>2</td>
-							<td>Apathetic Victim <div class="xsmall">Resigned, sit on your hands, apathetic, demotivated</div></td>
-							<td>My Life sucks</td>
-						</tr>
-						<tr>
-							<td>3</td>
-							<td>Lone Warrior <div class="xsmall">Competitive, prideful, tapped</div></td>
-							<td>I'm great (and you're not!)</td>
-						</tr>
-						<tr>
-							<td>4</td>
-							<td>Tribal Pride <div class="xsmall">Agile, Common purpose, High performanced</div></td>
-							<td>We'are great (and they're not!)</td>
-						</tr>
-						<tr>
-							<td>5</td>
-							<td>Innocent Wonderment <div class="xsmall">Agile, global purpose</div></td>
-							<td>Life is great</td>
-						</tr>
-					</table>
+					<h3>Adaptative Complex System</h3>
+					<p class="xsmall">Compound by different agents</p>
+					<p class="small">Interacted, interconnected, organized (self)</p>
+					<p class="small">Adapt, compete & colaborate: <strong>objetive</strong></p>
+					<p class="xsmall">Sinergy, different visions (Planning Poker*)</p>
+				</section>
 
-
+				<section>
+					<h3>Adaptative Complex System Risks</h3>
+					<p class="xsmall">Precidibility, simplistic solutions, hierarchy...</p>
+					<p class="xsmall">Complex does not mean <strong>complicated</strong></p>
 				</section>
 
 				<section data-background="assets/images/background-secondary.png">
 					<em>Chapter 2</em>
-					<h2>Management 3.0</h2>
-				</section>
-
-				<section data-background="assets/images/background-secondary.png">
-					<em>Chapter 3</em>
 					<h2>Motivation</h2>
 				</section>
 
 				<section data-background="assets/images/background-secondary.png">
-					<em>Chapter 4</em>
+					<em>Chapter 3</em>
 					<h2>Self-organized teams</h2>
 				</section>
 
 				<section data-background="assets/images/background-secondary.png">
-					<em>Chapter 5</em>
+					<em>Chapter 4</em>
 					<h2>Multifunctional teams</h2>
 				</section>
 
 				<section data-background="assets/images/background-secondary.png">
-					<em>Chapter 6</em>
+					<em>Chapter 5</em>
 					<h2>Productivity & Waste</h2>
+				</section>
+
+				<section data-background="assets/images/background-secondary.png">
+					<em>Chapter 6</em>
+					<h2>Improvement</h2>
 				</section>
 
 				<section data-background="assets/images/background-secondary.png">
