--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
 				<section data-background="assets/images/background-secondary.png">
 					<em>Chapter 1</em>
 					<h2>Introduction to Peopleware</h2>
+					<p class="italic small">Make People Awesome</p>
 				</section>
 
 				<section>
@@ -293,6 +294,108 @@
 				<section data-background="assets/images/background-secondary.png">
 					<em>Chapter 2</em>
 					<h2>Motivation</h2>
+					<p class="italic small">The Eye of the Tiger</p>
+				</section>
+
+				<section>
+					<h3>The Human Side of Enterprise</h3>
+					<p class="xxsmall">(McGregor, 1957)</p>
+					<table class="xsmall cols-2">
+						<tr>
+							<th class="right">The <strong class="xxbig featured">X</strong> Theory</th>
+							<th>The <strong class="xxbig featured">Y</strong> Theory</th>
+						</tr>
+						<tr>
+							<td class="right">Passive, Avoid Responsability, Need to be Managed, No Ambition</td>
+							<td>Responsable, Participative, Self-Management</td>
+						</tr>
+						<tr>
+							<td class="right italic">Persuade, Reward, Punish, Control</td>
+							<td class="italic">Delegate, Decentralize, Trust, Facilitate, Evaluate</td>
+						</tr>
+					</table>
+				</section>
+
+				<section>
+					<h3>The Maslow Pyramid</h3>
+					<p class="xsmall">Salary → Environment → Relationships → Self-Esteem* → Reputation*...</p>
+					<p><img src="assets/images/maslow.jpg" alt="Maslow Pyramid" class="large"></p>
+				</section>
+
+				<section>
+					<h3>Why we do what we do?</h3>
+					<table class="xsmall cols-2">
+						<tr>
+							<th class="right">Extrinsic</th>
+							<th>Intrinsic</th>
+						</tr>
+						<tr>
+							<td class="right"><strong class="featured">Punishment & Rewards</strong></td>
+							<td><strong class="featured">Mission Fulfillment</strong></td>
+						</tr>
+						<tr>
+							<td class="right xsmall">Because of the outcome that will result by doing the task</td>
+							<td class="xsmall">Because ot the interest and enjoyment in the task itself</td>
+						</tr>
+						<tr>
+							<td class="right italic">Promotions, Pay raises, Bonuses, Benefits, Prizes, Winning, Perks</td>
+							<td class="italic">Enjoyment, Purpose, Growth, Curiosity, Passion, Self-expression, Fun</td>
+						</tr>
+					</table>
+					<p class="small italic">The overjustfication effect</p>
+				</section>
+
+				<section>
+					<h3>Six Rules for Rewards</h3>
+					<p class="xsmall">(Jurgen Appelo, 2011)</p>
+					<ol class="small">
+						<li><strong>Don’t</strong> promise rewards <strong>in advance</strong>.
+							<div class="xxsmall">Give rewards at unexpected times so that people don’t change their intentions and focus on the reward.</div></li>
+						<li>Keep anticipated rewards <strong>small</strong>.
+							<div class="xxsmall">You cannot always prevent people from anticipating rewards. But this may be harmless when the rewards are small.</div></li>
+						<li>Reward <strong>continuously</strong>, not just once.
+							<div class="xxsmall">Every day can be a day to celebrate something. Every day is an opportunity for a reward.</div></li>
+						<li>Reward <strong>publicly</strong>, not privately.
+							<div class="xxsmall">Everyone should know what work is appreciated and why. A regular public reminder works better than a private one.</div></li>
+						<li>Reward <strong>behaviors</strong>, not only outcomes.
+							<div class="xxsmall">Outcomes can often be achieved through shortcuts while behavior is about hard work and effort.</div></li>
+						<li>Reward <strong>peers</strong>, not only subordinates.
+							<div class="xxsmall">Peers often know better than managers which of their colleagues deserve a compliment.</div></li>
+					</ol>
+				</section>
+
+				<section>
+					<h3>What motivates you?</h3>
+					<ul class="small none">
+						<li>Knowledge</li>
+						<li>Freedom</li>
+						<li>Honor</li>
+						<li>Status</li>
+						<li>Relationships</li>
+						<li>Order</li>
+						<li>Objetive</li>
+					</ul>
+				</section>
+
+				<section>
+					<h3>Kudo Box</h3>
+				</section>
+
+				<section>
+					<h3>Niko-Niko Calendar</h3>
+				</section>
+
+				<section>
+					<h3>One 2 One Meetings</h3>
+					<ul class="xsmall none">
+						<li><strong class="featured">OPEN</strong> - What's on your mind?</li>
+						<li><strong class="featured">SELF ESTEEM</strong> - What is your biggest accomplishment this month?</li>
+						<li><strong class="featured">CHALLENGE</strong> - What’s your biggest challenge right now?</li>
+						<li><strong class="featured">FOCUS</strong> - What do you want?</li>
+						<li><strong class="featured">IMPROVE</strong> - What things should we do differently? What processes can we improve?</li>
+						<li><strong class="featured">RESOURCES</strong> - What resources would be helpful to you right now?</li>
+						<li><strong class="featured">HELP</strong> - Is there anything I can help you with?</li>
+					</ul>
 				</section>
 
 				<section data-background="assets/images/background-secondary.png">
