Self-Organized: misc

--- a/index.html
+++ b/index.html
@@ -401,6 +401,57 @@
 				<section data-background="assets/images/background-secondary.png">
 					<em>Chapter 3</em>
 					<h2>Self-organized teams</h2>
+					<p class="italic small">Self-organization is the default way of management in nature</p>
+				</section>
+
+				<section>
+					<h3>What is a Self-organized team</h3>
+					<ul class="small">
+						<li>Autonomous: distributed control</li>
+						<li>Adaptable: adapts & improves</li>
+						<li>Responsable: collectively</li>
+					</ul>
+				</section>
+
+				<section>
+					<h3>Leadership Models</h3>
+					<table class="small">
+						<tr>
+							<th>Strict Control</th>
+							<th>Servant</th>
+							<th>Host</th>
+						</tr>
+						<tr>
+							<td class="small italic">X theory</td>
+							<td class="small italic"></td>
+							<td class="small italic">Rules, Limits, Actions, Guest</td>
+						</tr>
+					</table>
+				</section>
+
+				<section>
+					<h3>The Delegation Board</h3>
+					<table class="xsmall center">
+						<tr>
+							<th>Tell</th>
+							<th>Sell</th>
+							<th>Consult</th>
+							<th>Agree</th>
+							<th>Advise</th>
+							<th>Inquire</th>
+							<th>Delegate</th>
+						</tr>
+						<tr class="xsmall italic">
+							<td>manager decission, no explanation</td>
+							<td>manager decission, try to convince</td>
+							<td>manager decission, ask first</td>
+							<td>accord</td>
+							<td>team decission, ask first</td>
+							<td>team decission, try to convince</td>
+							<td>team decission, no explanation</td>
+						</tr>
+					</table>
+					@TODO image!
 				</section>
 
 				<section data-background="assets/images/background-secondary.png">
