--- a/index.html
+++ b/index.html
@@ -459,6 +459,44 @@
 					<h2>Multifunctional teams</h2>
 				</section>
 
+				<section>
+					<h3>Multifunctional Matrix</h3>
+					<canvas data-chart="radar">
+					<!--
+					{
+					 "data": {
+					  "labels": ["Management"," Testing"," DevOps"," Frontend"," Backend"," Site-Building"],
+					  "datasets": [
+					   {
+					    "data":[80,20,80,20,10,80],
+					    "label":"Daenerys","backgroundColor":"rgba(20,220,220,.6)"
+					   },
+					   {
+					    "data":[60,20,50,40,80,60],
+					    "label":"Jon Snow","backgroundColor":"rgba(220,220,20,.6)"
+					   }
+						 ,
+					   {
+					    "data":[40,40,40,90,90,40],
+					    "label":"Arya","backgroundColor":"rgba(20,120,120,.6)"
+						},
+						{
+						 "data":[98,70,60,10,20,60],
+						 "label":"Cersei","backgroundColor":"rgba(220,10,20,.6)"
+						}
+						,
+						{
+						 "data":[10,10,70,50,90,50],
+						 "label":"The Hound","backgroundColor":"rgba(20,10,20,.6)"
+						}
+					  ]
+					 },
+					 "options": { "responsive": "true" }
+					}
+					-->
+					</canvas>
+				</section>
+
 				<section data-background="assets/images/background-secondary.png">
 					<em>Chapter 5</em>
 					<h2>Productivity & Waste</h2>
@@ -499,7 +537,9 @@
 					{ src: 'plugin/markdown/marked.js' },
 					{ src: 'plugin/markdown/markdown.js' },
 					{ src: 'plugin/notes/notes.js', async: true },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
+					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+					{ src: 'plugin/chart/Chart.min.js' },
+					{ src: 'plugin/chart/csv2chart.js' }
 				]
 			});
 		</script>
