--- a/index.html
+++ b/index.html
@@ -461,6 +461,66 @@
 
 				<section>
 					<h3>Multifunctional Matrix</h3>
+					<table class="xsmall">
+						<tr>
+							<th></th>
+							<th>Management</th>
+							<th>Testing</th>
+							<th>DevOps</th>
+							<th>Frontend</th>
+							<th>Backend</th>
+							<th>Site-Building</th>
+						</tr>
+						<tr>
+							<td>Daenerys</td>
+							<td class="center xxbig">✖</td>
+							<td class="center xxbig">■</td>
+							<td class="center xxbig">■</td>
+							<td></td>
+							<td></td>
+							<td class="center xxbig">■</td>
+						</tr>
+						<tr>
+							<td>Jon Snow</td>
+							<td class="center xxbig">■</td>
+							<td></td>
+							<td class="center xxbig">✖</td>
+							<td class="center xxbig">■</td>
+							<td class="center xxbig">✖</td>
+							<td class="center xxbig">■</td>
+						</tr>
+						<tr>
+							<td>Arya</td>
+							<td></td>
+							<td></td>
+							<td></td>
+							<td class="center xxbig">✖</td>
+							<td class="center xxbig">✖</td>
+							<td></td>
+						</tr>
+						<tr>
+							<td>Cersei</td>
+							<td class="center xxbig">✖</td>
+							<td class="center xxbig">■</td>
+							<td class="center xxbig">■</td>
+							<td></td>
+							<td></td>
+							<td class="center xxbig">■</td>
+						</tr>
+						<tr>
+							<td>The Hound</td>
+							<td></td>
+							<td></td>
+							<td class="center xxbig">■</td>
+							<td class="center xxbig">■</td>
+							<td class="center xxbig">✖</td>
+							<td></td>
+						</tr>
+					</table>
+				</section>
+
+				<section>
+					<h3>Multifunctional Radar</h3>
 					<canvas data-chart="radar">
 					<!--
 					{
@@ -468,7 +528,7 @@
 					  "labels": ["Management"," Testing"," DevOps"," Frontend"," Backend"," Site-Building"],
 					  "datasets": [
 					   {
-					    "data":[80,20,80,20,10,80],
+					    "data":[80,20,80,20,10,30],
 					    "label":"Daenerys","backgroundColor":"rgba(20,220,220,.6)"
 					   },
 					   {
