--- a/index.html
+++ b/index.html
@@ -72,12 +72,11 @@
 					<p class="xsmall left"><em>In this session we will talk about:</em></p>
 					<ol>
 						<li>Introduction to Peopleware</li>
-						<li>Management 3.0</li>
-						<li>Motivation: intrinsic vs extrinsic</li>
+						<li>Motivation</li>
 						<li>Self-organized teams</li>
 						<li>Multifunctional teams</li>
 						<li>Productivity & waste</li>
-						<li>Conclusions</li>
+						<li>Improvement</li>
 					</ol>
 				</section>
 
@@ -88,23 +87,44 @@
 				</section>
 
 				<section>
-					<div><img src="assets/images/triangle.png" class="small margin-none"></div>
+					<div><img src="assets/images/triangle.png" class="medium margin-none"></div>
 					<p class="small">The <strong>three</strong> core aspects of computer technology are: <strong class="featured">hardware</strong>, <strong class="featured">software</strong> and <strong class="featured"><u>peopleware</u></strong>.</p>
 					<p class="xsmall italic">Peopleware refers to anything that has to do with the role of people including such issues as developer productivity, teamwork, group dynamics, the psychology of programming, project management, organizational factors, human interface design, and human-machine interaction..</p>
 				</section>
 
 				<section>
 					<h3>The Principles of Scientific Management</h3>
-					<div class="xsmall">(Frederick Taylor, 1911)</div>
+					<p class="xsmall">(Frederick Taylor, 1911)</p>
+					<div>
+						<img src="assets/images/brain.png" class="small margin-none" alt="Brain">
+						<img src="assets/images/shovel.png" class="small margin-none" alt="Shovel">
+					</div>
 					<p><strong class="featured">Thinkers</strong> vs <strong class="featured">Doers</strong></p>
 					<p class="xsmall">Functional departments, especialization, hierarchy</p>
 					<p class="xsmall">Up/Down (Social) | Comunication Issues | Time & Planification (waterfall model)</p>
 				</section>
 
 				<section>
-					@TODO img!
+					<div><img src="assets/images/puzzle.png" class="large margin-none" alt="Puzzle"></div>
 					<p>People are Interchangeable <strong class="featured">Resources</strong></p>
+					<p class="fragment" data-fragment-index="0">Are they?</p>
 				</section>
+
+				<section>
+					<p><strong class="featured">Production</strong> vs <strong class="featured">Development</strong></p>
+					<table class="xsmall">
+						<tr>
+							<td class="right">Strict & Clear phases, Especialization, One Process</td>
+							<td>Creativity, Motivation, Invidividual Skills, Communication</td>
+						</tr>
+						<tr>
+							<td class="right italic">Requirements → Design → Build → Testing → Release</td>
+							<td class="italic">Open to change, not clear specifications, what does the client need?</td>
+						</tr>
+					</table>
+					<p ></p>
+				</section>
+
 
 				<section>
 					<h3>Classic Software Development Mistakes (People)</h3>
@@ -121,21 +141,6 @@
 						<li>Lack of effective project sponsorship</li>
 						<li>Lack of stakeholder buy-in</li>
 					</ol>
-				</section>
-
-				<section>
-					<p><strong class="featured">Production</strong> vs <strong class="featured">Development</strong></p>
-					<table class="xsmall">
-						<tr>
-							<td class="right">Strict & Clear phases, Especialization, One Process</td>
-							<td>Creativity, Motivation, Invidividual Skills, Communication</td>
-						</tr>
-						<tr>
-							<td class="right italic">Requirements → Design → Build → Testing → Release</td>
-							<td class="italic">Open to change, not clear specifications, what does the client need?</td>
-						</tr>
-					</table>
-					<p ></p>
 				</section>
 
 				<section>
@@ -199,7 +204,7 @@
 
 				<section>
 					<h3>Good to Great</h3>
-					<p class="xxsmall">(Collins 2001)</p>
+					<p class="xxsmall">(Collins, 2001)</p>
 					<p>What differentiate <strong class="featured">great</strong> companies</p>
 					<table class="xsmall">
 						<tr>
@@ -379,14 +384,16 @@
 
 				<section>
 					<h3>Kudo Box</h3>
+					<img src="assets/images/kudobox.jpg" alt="Faces" class="large">
 				</section>
 
 				<section>
 					<h3>Niko-Niko Calendar</h3>
+					<img src="assets/images/nikoniko.png" alt="Faces" class="large">
 				</section>
 
 				<section>
-					<h3>One 2 One Meetings</h3>
+					<h3>Ask the Team: One 2 One Meetings</h3>
 					<ul class="xsmall none">
 						<li><strong class="featured">OPEN</strong> - What's on your mind?</li>
 						<li><strong class="featured">SELF ESTEEM</strong> - What is your biggest accomplishment this month?</li>
@@ -414,23 +421,32 @@
 				</section>
 
 				<section>
-					<h3>Leadership Models</h3>
-					<table class="small">
-						<tr>
-							<th>Strict Control</th>
-							<th>Servant</th>
-							<th>Host</th>
-						</tr>
-						<tr>
-							<td class="small italic">X theory</td>
-							<td class="small italic"></td>
-							<td class="small italic">Rules, Limits, Actions, Guest</td>
-						</tr>
-					</table>
+					<h3>No Managers ≈ No testers</h3>
+					<p class="xsmall">"But do we need <strong>managers anyway</strong>, with all these self-steering teams nowadays? Management 3.0 believes management is the <strong>responsibility of everyone</strong>. It is like software testing... Depending on your organization you maybe need specialized people with a focus on management."</p>
+					<p class="xxsmall right">Jurge Appelo</p>
+				</section>
+
+				<section>
+					<h3>Leadership Models: Strict Control</h3>
+					<img src="assets/images/boss.jpg" alt="boss">
+				</section>
+
+				<section>
+					<h3>Leadership Models: Servant</h3>
+					<img src="assets/images/servant.png" alt="Servant" class="large">
+				</section>
+
+				<section>
+					<h3>Leadership Models: Host & Guests</h3>
+					<p>Rules, Limits, Actions</p>
+					<img src="assets/images/party.jpg" alt="Party" class="large">
 				</section>
 
 				<section>
 					<h3>The Delegation Board</h3>
+					<div class="">
+							<img src="assets/images/gradient.jpg" alt="gradient" class="margin-none">
+					</div>
 					<table class="xsmall center">
 						<tr>
 							<th>Tell</th>
@@ -454,9 +470,37 @@
 					@TODO image!
 				</section>
 
+				<section>
+					<h3>Minimize Bureaucracy</h3>
+					<p class="small">Kills entrepreneurial spirit: creativity, flexibility, initiative, teamwork, self-confidence, and critical thinking.</p>
+					<p class="italic">Same approach, Same results</p>
+					<img src="assets/images/papers.png" class="large">
+				</section>
+
+				<section>
+					<h3>Maximize Failure?</h3>
+					<p class="small">Secure environment: avoid fear to fail</p>
+					<p>Celebrate <strong>Learning</strong> (not failure or success)</p>
+				</section>
+
 				<section data-background="assets/images/background-secondary.png">
 					<em>Chapter 4</em>
 					<h2>Multifunctional teams</h2>
+					<p class="italic small">one for all and all for one</p>
+				</section>
+
+				<section>
+					<h3>The FullStack</h3>
+					<p class="italic">
+						<span class="fragment">Management</span>
+						<span class="fragment">, Testing</span>
+						<span class="fragment">, DevOps</span>
+						<span class="fragment">, Frontend</span>
+						<span class="fragment">, Backend</span>
+						<span class="fragment">, Site-Building...</span>
+					</p>
+					<p><img src="assets/images/tool-box.png" alt="ToolBox" class="large"></p>
+					<p class="fragment">The FullStack <strong>Mith</strong></p>
 				</section>
 
 				<section>
@@ -555,6 +599,53 @@
 					}
 					-->
 					</canvas>
+				</section>
+
+				<section>
+					<h3>The Stages of Team Formation</h3>
+					<p class="xsmall">(Tuckman, 1965)</p>
+					<div class="">
+						<img src="assets/images/stairs.png" alt="Stairs" class="margin-none small">
+					</div>
+					<table class="xsmall">
+						<tr class="small">
+							<th></th>
+							<th class="strong">Stage</th>
+							<th>Manager</th>
+							<th>Team</th>
+						</tr>
+						<tr class="fragment">
+							<td>1</td>
+							<td class="strong">Forming</td>
+							<td>Direct & establish clear objetives</td>
+							<td>Find your place</td>
+						</tr>
+						<tr class="fragment">
+							<td>2</td>
+							<td class="strong">Storming</td>
+							<td>Coach in assetiveness, Resolve conflicts</td>
+							<td>Improve Relationships</td>
+						</tr>
+						<tr class="fragment">
+							<td>3</td>
+							<td class="strong">Norming</td>
+							<td>Step back</td>
+							<td>Agree own rules</td>
+						</tr>
+						<tr class="fragment">
+							<td>4</td>
+							<td class="strong">Performing</td>
+							<td>Delegate</td>
+							<td>Take responsibility</td>
+						</tr>
+						<tr class="fragment">
+							<td>*</td>
+							<td class="strong">Adjouring</td>
+							<td>Celebrate & Iterate</td>
+							<td>Celebrate & Iterate</td>
+						</tr>
+					</table>
+					<!-- https://www.mindtools.com/pages/article/newLDR_86.htm -->
 				</section>
 
 				<section data-background="assets/images/background-secondary.png">
