--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
 				<section data-background="assets/images/background-secondary.png">
 					<em>Chapter 3</em>
 					<h2>Self-organized teams</h2>
-					<p class="italic small">Self-organization is the default way of management in nature</p>
+					<p class="italic small">The default way of management in nature</p>
 				</section>
 
 				<section>
@@ -651,16 +651,133 @@
 				<section data-background="assets/images/background-secondary.png">
 					<em>Chapter 5</em>
 					<h2>Productivity & Waste</h2>
+					<p class="italic small">More hours != more work done</p>
+				</section>
+
+				<section>
+					<h3>Crunch Mode: Work Harder (not smarter)</h3>
+					<p class="small"><strong>Motivation:</strong> no one leaves the office before the boss does</p>
+					<p class="small"><strong>Productivity:</strong> number of hours in front of your desktop, lines of code</p>
+					<p class="small"><strong>Incidences/Bugs:</strong> the team is not doing their work properly</p>
+				</section>
+
+				<section>
+					<h3>Why Crunch Mode Doesn’t Work: 6 Lessons </h3>
+					<p class="xsmall italic">(Evan Robinson, 2008)</p>
+					<!-- https://dexterity.wordpress.com/2008/08/21/why-crunch-mode-doesnt-work-6-lessons-by-evan-robinson/ -->
+					<ol class="xxsmall margin-bottom-15">
+						<li>Productivity <strong class="xxbig">varies</strong> over the course of the workday, with the greatest productivity occurring in the <strong class="xxbig">first four to six</strong> hours. After enough hours, productivity approaches zero; eventually it <strong>becomes negative</strong>.</li>
+						<li>Productivity is <strong class="xxbig">hard to quantify</strong> for knowledge workers.</li>
+						<li>Five-day weeks of eight-hour days <strong class="xxbig">maximize long-term output</strong> in every industry that has been studied over the past century. What makes us think that our industry is somehow exempt from this rule?</li>
+						<li>At <strong class="xxbig">60 hours per week</strong>, the loss of productivity caused by working longer hours <strong class="xxbig">overwhelms</strong> the extra hours worked within a couple of months.</li>
+						<li>Continuous work  <strong class="xxbig">reduces cognitive function</strong> 25% for every 24 hours. Multiple consecutive overnighters have a severe cumulative effect.</li>
+						<li> <strong class="xxbig">Error rates climb with hours worked</strong> and especially with loss of sleep . Eventually the odds catch up with you, and catastrophe occurs. When schedules are tight and budgets are big, is this a risk you can really afford to take?</li>
+					</ol>
+					<p></p>
+				</section>
+
+				<section>
+					<h3>Remove Waste</h3>
+					<ul class="small">
+						<li>Superflous documentation</li>
+						<li>Neverending meetings</li>
+						<li>Unused features</li>
+					</ul>
+				</section>
+
+				<section>
+					<h3>Waste: Interruptions / Context switching</h3>
+					<div>
+						<img src="assets/images/focus.jpg" class="large">
+					</div>
+				</section>
+
+				<section>
+					<h3>Waste: Low quality code</h3>
+					<div>
+						<img src="assets/images/code-quality.jpg" class="large">
+					</div>
+				</section>
+
+				<section>
+					<h3>Waste: Oversized teams (Communication)</h3>
+					<div class="">
+						<img src="assets/images/lines-of-communication-brooks.png" class="large">
+						<!-- http://leftfoot.com.au/blog/brooks-law-lines-of-communication-calculator-siri-shortcut -->
+					</div>
+				</section>
+				<section>
+					<h3>Team Productivity: Swarming</h3>
+					<p class="small">One piece continuous flow.</p>
+					<p class="xxsmall">Kanban: WIP (work in progress) limit.</p>
+					<img src="assets/images/kanban-board.png" alt="Kanban board" class="large">
+				</section>
+
+				<section>
+					<h3>Team Productivity: King & Servants (Swarming)</h3>
+					<p class="xsmall">(Kinberg, 2007)</p>
+
+						<img src="assets/images/crown.png" alt="Crown" class="small margin-none">
+
+					<ul class="xsmall right-70">
+						<li>Anyone working on the <strong>top priority</strong> story is <strong>King</strong>.</li>
+						<li><strong>Everyone else</strong> on the team is a <strong>Servant</strong>.</li>
+						<li>You want to be King. Try to find ways to help out with the top priority story.</li>
+						<li>Whenever a King needs help, Servants <strong>immediately</strong> offer their services.</li>
+						<li>A Servant may <strong>not disrupt a King</strong>.</li>
+						<li>A Servant may never check in unreleasable code on the work branch. A King may check in whatever he pleases (as long as he doesn't violate a branch policy of course).</li>
+						<li>As soon as the top priority story <strong>is Done</strong>, anyone working on the <strong>next story</strong> is now King.</li>
+					</ul>
+				</section>
+
+				<section>
+					<h3>Team Productivity: TimeBoxing</h3>
+				</section>
+
+				<section>
+					<h3>Self Productivity: Pomodoro Technique</h3>
+				</section>
+
+				<section>
+					<h3>Self Productivity: GTD</h3>
 				</section>
 
 				<section data-background="assets/images/background-secondary.png">
 					<em>Chapter 6</em>
 					<h2>Improvement</h2>
+					<p class="small italic">Kaizen (改善) - change for better</p>
+				</section>
+
+				<section>
+					<img src="assets/images/comic-characters-2022709_960_720.png" alt="Stop" class="small">
+					<p class="italic">"If it works do not change it!"</p>
+					<p class="small fragment">someone will do it better soon or later... (off the market)</p>
+				</section>
+
+				<section>
+					<h3>Retrospectives</h3>
+					<img src="assets/images/retrospective-5.png" class="large">
+					<ul class="xsmall right-30">
+						<li>Keep Doing: it works!</li>
+						<li>Less of: not helping.</li>
+						<li>More of: let's try it more</li>
+						<li>Stop doing: not working</li>
+						<li>Start doing: new ideas</li>
+					</ul>
 				</section>
 
 				<section data-background="assets/images/background-secondary.png">
 					<em>Chapter 7</em>
 					<h2>Conclusions</h2>
+				</section>
+
+				<section>
+					<ul>
+						<li>People are not Interchangeable pieces</li>
+						<li>Invest in a Healty environment</li>
+						<li>Grooming the team</li>
+						<li>Evolve!</li>
+					</ul>
 				</section>
 
 				<section data-background="assets/images/background-primary.png">
